--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="form">
-  <div class="form-group row" [formArrayName]="field.name">
-    <label class="col-sm-3 col-form-label" [attr.for]="ticketUUID + '-' + field.name">{{labelValue + (field.required ? ' *' : '')}}</label>
-    <div class="col-sm-9" [ngSwitch]="field.type">
+  <div class="form-group" [formArrayName]="field.name">
+    <label [attr.for]="ticketUUID + '-' + field.name">{{labelValue + (field.required ? ' *' : '')}}</label>
+    <ng-container [ngSwitch]="field.type">
       <input *ngSwitchCase="'input:text'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <input *ngSwitchCase="'input:tel'" [attr.id]="ticketUUID + '-' + field.name" type="tel" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <input *ngSwitchCase="'vat:eu'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
@@ -10,9 +10,9 @@
         <ng-template ng-notfound-tmp let-searchTerm="searchTerm"></ng-template>
       </ng-select>
       <select *ngSwitchCase="'select'" [attr.id]="ticketUUID + '-' + field.name" class="custom-select" formControlName="0" appInvalidFeedback>
-          <option value=""></option>
+          <option value="" *ngIf="!field.required"></option>
           <option *ngFor="let c of field.restrictedValues" [ngValue]="c">{{getSelectLabel(c)}}</option>
       </select>
-    </div>
+    </ng-container>
   </div>
 </div>
