--- a/src/app/reservation/ticket-form/ticket-form.component.html
+++ b/src/app/reservation/ticket-form/ticket-form.component.html
@@ -1,40 +1,39 @@
-<div *ngIf="ticket" [formGroup]="form">
+<div class="row mt-4">
+  <div *ngIf="ticket" [formGroup]="form" class="col-md-10 offset-md-1">
     <div *ngFor="let field of ticket.ticketFieldConfigurationBeforeStandard">
-        <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')"></app-additional-field>
+      <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')"></app-additional-field>
     </div>
 
-    <div class="form-group row">
-        <label [attr.for]="ticket.uuid + '-first-name'" class="col-sm-3 col-form-label">{{'common.first-name' | translate}} *</label>
-        <div class="col-sm-9">
-            <input [attr.id]="ticket.uuid + '-first-name'" formControlName="firstName" type="text" [ngClass]="{'form-control': ticket.locked !== true, 'form-control-plaintext': ticket.locked}" appInvalidFeedback [readonly]="ticket.locked === true">
+    <div class="form-row">
+      <div class="col-12 col-md-6">
+        <div class="form-group">
+          <label [attr.for]="ticket.uuid + '-first-name'">{{'common.first-name' | translate}} *</label>
+          <input [attr.id]="ticket.uuid + '-first-name'" formControlName="firstName" type="text" [ngClass]="{'form-control': ticket.locked !== true, 'form-control-plaintext': ticket.locked}" appInvalidFeedback [readonly]="ticket.locked === true">
         </div>
+      </div>
+      <div class="col-12 col-md-6">
+        <div class="form-group">
+          <label [attr.for]="ticket.uuid + '-last-name'">{{'common.last-name' | translate}} *</label>
+          <input [attr.id]="ticket.uuid + '-last-name'" formControlName="lastName" type="text" [ngClass]="{'form-control': ticket.locked !== true, 'form-control-plaintext': ticket.locked}" appInvalidFeedback [readonly]="ticket.locked === true">
+        </div>
+      </div>
     </div>
 
-    <div class="form-group row">
-        <label [attr.for]="ticket.uuid + '-last-name'" class="col-sm-3 col-form-label">{{'common.last-name' | translate}} *</label>
-        <div class="col-sm-9">
-            <input [attr.id]="ticket.uuid + '-last-name'" formControlName="lastName" type="text" [ngClass]="{'form-control': ticket.locked !== true, 'form-control-plaintext': ticket.locked}" appInvalidFeedback [readonly]="ticket.locked === true">
-        </div>
-    </div>
-
-    <div class="form-group row">
-        <label [attr.for]="ticket.uuid + '-email'" class="col-sm-3 col-form-label">{{'common.email' | translate}} *</label>
-        <div class="col-sm-9">
-            <input [attr.id]="ticket.uuid + '-email'" formControlName="email" type="email" [ngClass]="{'form-control': ticket.locked !== true, 'form-control-plaintext': ticket.locked}" appInvalidFeedback [readonly]="ticket.locked === true">
-        </div>
+    <div class="form-group">
+      <label [attr.for]="ticket.uuid + '-email'">{{'common.email' | translate}} *</label>
+      <input [attr.id]="ticket.uuid + '-email'" formControlName="email" type="email" [ngClass]="{'form-control': ticket.locked !== true, 'form-control-plaintext': ticket.locked}" appInvalidFeedback [readonly]="ticket.locked === true">
     </div>
 
     <div *ngFor="let field of ticket.ticketFieldConfigurationAfterStandard">
-        <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')"></app-additional-field>
+      <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')"></app-additional-field>
     </div>
 
-    <div class="form-group row" *ngIf="event && event.contentLanguages.length > 1">
-        <label [attr.for]="ticket.uuid + '-userLanguage'" class="col-sm-3 col-form-label" translate="reservation-page-complete.language"></label>
-        <div class="col-sm-9">
-            <select [attr.id]="ticket.uuid + '-userLanguage'" formControlName="userLanguage" class="custom-select" appInvalidFeedback>
-                <option value=""></option>
-                <option *ngFor="let lang of event.contentLanguages" [ngValue]="lang.locale">{{lang.displayLanguage}}</option>
-            </select>
-        </div>
+    <div class="form-group" *ngIf="event && event.contentLanguages.length > 1">
+      <label [attr.for]="ticket.uuid + '-userLanguage'" translate="reservation-page-complete.language"></label>
+      <select [attr.id]="ticket.uuid + '-userLanguage'" formControlName="userLanguage" class="custom-select" appInvalidFeedback>
+        <option value=""></option>
+        <option *ngFor="let lang of event.contentLanguages" [ngValue]="lang.locale">{{lang.displayLanguage}}</option>
+      </select>
     </div>
+  </div>
 </div>
