--- a/src/app/price-tag/price-tag.component.html
+++ b/src/app/price-tag/price-tag.component.html
@@ -1,9 +1,8 @@
 <div class="d-inline-flex flex-column">
     <div class="text-align-right">
-        <span *ngIf="displayCurrencySymbol" [class.mr-2]="!displayTextInline">{{currencyDescriptor.symbol}}</span><ng-container *ngIf="displayTextInline">{{' '}}</ng-container>
+        <span [ngClass]="{'mr-2': !displayTextInline && displayCurrencySymbol, 'mr-1': !displayTextInline && !displayCurrencySymbol}">{{currencyDescriptor.symbol}}</span><ng-container *ngIf="displayTextInline">{{' '}}</ng-container>
         <span *ngIf="displayDiscountedPrice" class="text-align-right"><del>{{formattedPrice}}</del>{{' '}}<mark>{{discountedPrice}}</mark></span>
         <span *ngIf="!displayDiscountedPrice" class="text-align-right">{{formattedPrice}}</span>
-        <span *ngIf="!displayCurrencySymbol" [class.ml-1]="!displayTextInline">{{currencyDescriptor.code}}</span>
     </div>
     <small *ngIf="showTaxDetails" class="text-align-right text-muted"><i>{{(event.vatIncluded ? 'show-event.incVat' : 'show-event.excVat') | translate:{'0': removeRedundantPrecision(event.vat), '1': ('common.vat' | translate)} }}</i></small>
   </div>
