--- a/src/app/reservation/offline-payment/offline-payment.component.html
+++ b/src/app/reservation/offline-payment/offline-payment.component.html
@@ -24,14 +24,12 @@
     <h4 [innerHTML]="'reservation-page-waiting.questions' | translate: {'0': event.organizationEmail, '1': reservationInfo.id}"></h4>
   </div>
 
-  <div class="row d-flex justify-content-between wMarginTop">
-      <div class="col-md-5 col-12"><a [href]="event.websiteUrl" class="btn btn-light block-button" translate="to-event-site"></a></div>
-      <div class="col-md-5 col-12" *ngIf="event.invoicingConfiguration.userCanDownloadReceiptOrInvoice && reservationInfo.invoiceNumber !== null">
+  <div class="row d-flex justify-content-between wMarginTop mobile-add-margin-bottom mt-4">
+      <div class="col-md-5 col-12 order-md-1" *ngIf="event.invoicingConfiguration.userCanDownloadReceiptOrInvoice && reservationInfo.invoiceNumber !== null">
           <a [href]="'/api/v2/public/event/' + event.shortName + '/reservation/' + reservationInfo.id + '/invoice'" class="btn btn-success block-button" target="_blank" translate="reservation-page-complete.download-your-invoice"></a>
       </div>
-      <div class="col-md-5 col-12" *ngIf="!event.invoicingConfiguration.userCanDownloadReceiptOrInvoice" translate="reservation-page-waiting.invoice-will-be-sent"></div>
+      <div class="col-md-5 col-12 order-md-1 text-center" *ngIf="!event.invoicingConfiguration.userCanDownloadReceiptOrInvoice"><p translate="reservation-page-waiting.invoice-will-be-sent"></p></div>
+      <div class="col-md-5 col-12 order-md-0"><a [href]="event.websiteUrl" class="btn btn-light block-button" translate="to-event-site"></a></div>
   </div>
-
-
   <div class="text-center wMarginTop30px">{{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}</div>
 </div>
