move the margin-top/bottom from the main container to the contained component

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="event">
+<div *ngIf="event" class="add-margin-bottom">
     <app-event-header [event]="event"></app-event-header>
 
     <hr>
