--- a/src/app/view-ticket/view-ticket.component.html
+++ b/src/app/view-ticket/view-ticket.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="event && ticketInfo">
+<div *ngIf="event && ticketInfo" class="add-margin-bottom">
   <app-event-header [event]="event"></app-event-header>
 
   <hr>
