--- a/src/app/reservation/processing-payment/processing-payment.component.html
+++ b/src/app/reservation/processing-payment/processing-payment.component.html
@@ -9,6 +9,6 @@
   <app-summary-table [event]="event" [reservationInfo]="reservationInfo"></app-summary-table>
 
   <div class="alert alert-info text-center">
-    <h4><fa-icon [icon]="['fa', 'cog']" [spin]="true"></fa-icon>{{' '}}<span translate="reservation.payment-in-progress"></span></h4>
+    <h4><fa-icon [icon]="['fas', 'cog']" [spin]="true"></fa-icon>{{' '}}<span translate="reservation.payment-in-progress"></span></h4>
   </div>
 </div>
