--- a/src/app/event-display/event-display.component.scss
+++ b/src/app/event-display/event-display.component.scss
@@ -1,11 +1,11 @@
-.ticket-categories h3 {
-    font-size: 1rem;
-    font-weight: bold;
+h2 .badge {
+  font-size: 42%;
+  vertical-align: middle;
 }
 
-h2 {
-    margin-top: 20px;
-    margin-bottom: 10px;
+h4 .badge {
+  font-size: 52%;
+  vertical-align: middle;
 }
 
 .promo-code-input {
