--- a/src/styles.scss
+++ b/src/styles.scss
@@ -224,3 +224,13 @@ div.preformatted {
   word-wrap: break-word;
   white-space: pre-wrap;
 }
+
+h2 .badge {
+  font-size: 42%;
+  vertical-align: middle;
+}
+
+h4 .badge {
+  font-size: 52%;
+  vertical-align: middle;
+}
