--- a/src/app/item-card/item-card.html
+++ b/src/app/item-card/item-card.html
@@ -1,4 +1,4 @@
-<div class="card mt-4" [formGroup]="parentFormGroup">
+<div class="card mt-4" [formGroup]="parentFormGroup" [ngClass]="additionalClass">
   <div class="card-body">
     <div class="d-flex w-100 justify-content-between">
       <div class="d-flex flex-grow-1 justify-content-between pr-md-5">
