--- a/src/app/item-card/item-card.html
+++ b/src/app/item-card/item-card.html
@@ -7,7 +7,7 @@
             <ng-content select=".item-title"></ng-content>
           </h4>
           <div class="d-none d-md-block">
-            <app-category-sale-period [category]="item" [currentLang]="currentLang"></app-category-sale-period>
+            <app-item-sale-period [item]="item" [currentLang]="currentLang"></app-item-sale-period>
           </div>
         </div>
         <div>
@@ -19,9 +19,9 @@
       </div>
     </div>
     <div class="d-md-none mt-3"><!-- mobile layout -->
-      <app-category-sale-period [category]="item" [currentLang]="currentLang"></app-category-sale-period>
+      <app-item-sale-period [item]="item" [currentLang]="currentLang"></app-item-sale-period>
       <div class="mt-3">
-        <ng-content select=".item-qty-selector"></ng-content>
+        <ng-content select=".item-qty-selector-mobile"></ng-content>
       </div>
     </div>
     <div class="card-text pt-2">
