--- a/src/app/item-card/item-card.html
+++ b/src/app/item-card/item-card.html
@@ -18,7 +18,10 @@
         <ng-content select=".item-qty-selector"></ng-content>
       </div>
     </div>
-    <div class="d-md-none mt-3"><!-- mobile layout -->
+    <div class="d-md-none"><!-- mobile layout -->
+      <ng-content select=".badge-sale-period"></ng-content>
+    </div>
+    <div class="d-md-none mt-3">
       <app-item-sale-period [item]="item" [currentLang]="currentLang"></app-item-sale-period>
       <div class="mt-3">
         <ng-content select=".item-qty-selector-mobile"></ng-content>
